--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/index.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coastal Elegance</title>
+    <meta name="description" content="A single page movie review platform" />
+    <meta name="author" content="Cybersmith" />
+    <meta property="og:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
