--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/index.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coastal Elegance</title>
-    <meta name="description" content="A single page movie review platform" />
+    <meta name="description" content="Coastal Elegance Tours is a premium transportation service committed to providing luxury travel experiences with minimal environmental impact." />
     <meta name="author" content="Cybersmith" />
     <meta property="og:image" content="/og-image.png" />
   </head>
