--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Coastal Elegance Tours is a premium transportation service committed to providing luxury travel experiences with minimal environmental impact." />
     <meta name="author" content="Cybersmith" />
     <meta property="og:image" content="/og-image.png" />
+    <meta name="google-site-verification" content="feSiHFB6Jzq7S4bH0SB1h_gtT_Ne87g0TtkyURjRomg" />
   </head>
   <body>
     <div id="root"></div>
