--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Coastal Elegance</title>
     <meta name="description" content="Coastal Elegance Tours is a premium transportation service committed to providing luxury travel experiences with minimal environmental impact." />
     <meta name="author" content="Cybersmith" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="https://coastal-elegance.com/og-image.png" />
     <meta name="google-site-verification" content="feSiHFB6Jzq7S4bH0SB1h_gtT_Ne87g0TtkyURjRomg" />
   </head>
   <body>
