--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/index.png" />
+    <link rel="icon" type="image/svg+xml" href="https://coastal-elegance.vercel.app//index.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coastal Elegance</title>
     <meta name="description" content="Coastal Elegance Tours is a premium transportation service committed to providing luxury travel experiences with minimal environmental impact." />
