--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="https://coastal-elegance.vercel.app//index.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coastal Elegance</title>
-    <meta property="og:description" content="Coastal Elegance Tours is a premium transportation service committed to providing luxury travel experiences with minimal environmental impact." />
+    <meta name="description" content="Coastal Elegance Tours is a premium transportation service committed to providing luxury travel experiences with minimal environmental impact." />
     <meta name="author" content="Cybersmith" />
     <meta property="og:image" content="https://coastal-elegance.vercel.app//og-image.png" />
     <meta name="google-site-verification" content="feSiHFB6Jzq7S4bH0SB1h_gtT_Ne87g0TtkyURjRomg" />
